fix bug of z-index

--- a/src/assets/style/base.css
+++ b/src/assets/style/base.css
@@ -62,6 +62,7 @@
 }
 
 html, body, #app, main {
+  z-index: -3;
   width: 100%;
   height: 100%;
 }
